; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline_required.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline_required.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gengetopt_args_info = type { i32 }

@EXIT_SUCCESS = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @imagetag_cmdline_required(%struct.gengetopt_args_info* %0, i8* %1) #0 {
  %3 = alloca %struct.gengetopt_args_info*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.gengetopt_args_info* %0, %struct.gengetopt_args_info** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %3, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @imagetag_cmdline_required2(%struct.gengetopt_args_info* %7, i8* %8, i32 0)
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %11, %2
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @EXIT_FAILURE, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %22

17:                                               ; preds = %13
  %18 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %3, align 8
  %19 = call i32 @imagetag_cmdline_free(%struct.gengetopt_args_info* %18)
  %20 = load i32, i32* @EXIT_FAILURE, align 4
  %21 = call i32 @exit(i32 %20) #3
  unreachable

22:                                               ; preds = %13
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i64 @imagetag_cmdline_required2(%struct.gengetopt_args_info*, i8*, i32) #1

declare dso_local i32 @imagetag_cmdline_free(%struct.gengetopt_args_info*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
